@@ -1,5 +1,8 @@
-# Ureleased
+## Ureleased
 
+## Changed 
+
+* Fix issue 32: using polyvariants as type arguments crashed for Camlp5
 
 ## 0.5.3 (2024-07-30)
 
